Update title from 'Evil' to 'EEEEEvil' in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evil Russian Pushup Program</title>
+    <title>EEEEEvil Russian Pushup Program</title>
         <meta http-equiv="refresh" content="5; url=https://XefOKq.short.gy/evil_russian_pushup_program">
     <style>
         body {
