--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EEEEEvil Russian Pushup Program</title>
-        <meta http-equiv="refresh" content="5; url=https://XefOKq.short.gy/evil_russian_pushup_program">
+    <title>Evil Russian Pushup Program</title>
+        <meta http-equiv="refresh" content="0; url=https://XefOKq.short.gy/evil_russian_pushup_program">
     <style>
         body {
             font-family: Arial, sans-serif;
